apps/fastkubefy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fastkubefy
  labels:
    app.kubernetes.io/name: fastkubefy
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: fastkubefy
  ports:
    - name: http
      port: 80
      targetPort: http
