apps/fastkubefy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastkubefy
  labels:
    app.kubernetes.io/name: fastkubefy
spec:
  ingressClassName: traefik
  rules:
    - host: fastkubefy.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fastkubefy
                port:
                  number: 80
